@@ -12,3 +12,7 @@ insert_final_newline     = true
 
 [*.{yml,yaml}]
 indent_size = 2
+[Changes]
+indent_size = 2
+[Makefile.PL]
+indent_size = 2
