@@ -14,4 +14,4 @@
 /Mozilla-CA-*.tar.gz
 /cover_db/
 /_eumm/
-certdata.txt
+/certdata.txt
