@@ -1,5 +1,8 @@
 Revision history for Mozilla-CA
 
+20230807
+  - Prevent extra headers in tarball and make it reproducible
+
 20230801
   - Update from Mozilla repository to 2023-08-01
   - Added certificates:
